--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -12,6 +12,7 @@
     "seed": "npx tsx prisma/lib/seed.ts"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.7.4",
     "@auth0/nextjs-auth0": "^2.2.1",
     "@headlessui/react": "^1.7.8",
     "@prisma/client": "^4.9.0",
