--- a/geopoints/.env.example
+++ b/geopoints/.env.example
@@ -10,3 +10,4 @@ AUTH0_CLIENT_ID
 AUTH0_CLIENT_SECRET
 NEXT_PUBLIC_BACKEND_HOST=http://localhost:3000
 NEXT_PUBLIC_API_KEY
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlshfgwja"
