--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.18.1",
     "next": "13.1.5",
+    "next-cloudinary": "^1.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
