--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -15,6 +15,7 @@
     "@algolia/autocomplete-core": "^1.7.4",
     "@auth0/nextjs-auth0": "^2.2.1",
     "@headlessui/react": "^1.7.8",
+    "@material-tailwind/react": "^1.2.5",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.18.1",
     "next": "13.1.5",
