--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@algolia/autocomplete-core": "^1.7.4",
     "@auth0/nextjs-auth0": "^2.2.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.8",
     "@material-tailwind/react": "^1.2.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.18.1",
     "next": "13.1.5",
@@ -24,7 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
