--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -28,7 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
-    "react-spinners": "^0.13.8",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
