--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.11.7",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.18.1",
+    "@tweenjs/tween.js": "^18.6.4",
     "next": "13.1.5",
     "next-cloudinary": "^1.12.2",
     "react": "18.2.0",
