--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
+    "react-tag-input": "^6.8.1",
     "react-testing-library": "^8.0.1"
   },
   "devDependencies": {
