--- a/geopoints/package.json
+++ b/geopoints/package.json
@@ -32,7 +32,8 @@
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-tag-input": "^6.8.1",
-    "react-testing-library": "^8.0.1"
+    "react-testing-library": "^8.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
